Issue/627 item quantity overlap (#645)
* increased padding on item quantity  selector to fix text overlap

* increased padding on item quantity  selector to fix text overlap

* fixed typo spotted in cart table description

* updated jest snapshots following correction of typo

--- a/packages/reference/client/scss/60_components/_c-line-items.scss
+++ b/packages/reference/client/scss/60_components/_c-line-items.scss
@@ -64,7 +64,7 @@
       padding-left: $global-spacing-unit;
 
       @include breakpoint(tablet) {
-        padding-left: $global-spacing-unit-small;
+        padding-left: $global-spacing-unit;
       }
     }
   }
@@ -79,7 +79,7 @@
       padding-left: $global-spacing-unit;
 
       @include breakpoint(tablet) {
-        padding-left: $global-spacing-unit-small;
+        padding-left: $global-spacing-unit;
       }
     }
   }
